# sly_ref

./: Cargo.toml  readme.md  rust-toolchain.toml
art/output/3D/: hy3dtemp_.glb
art/user/default/: comfy.settings.json
art/user/default/ComfyUI-Manager/cache/: 1514988643_custom-node-list.json  4245046894_model-list.json  746607195_github-stats.json  881334633_nodes.json
art/user/default/workflows/: lora.json  ref_3d_gen (2).json  ref_3d_gen.json  ref_gen_3d.json  sly_gen.json  sly_gen_stone_tile.json  sly_image_gen.json
assets/ref/: config.ron
imported_assets/: log
src/: actions.rs  assets.rs  comfy.rs  copy_paste.rs  main.rs  prefab.rs  progress.rs  save.rs  select.rs  ui.rs
src/workflows/: ref_3d_gen.json  ref_image_gen.json
tools/: comfy.sh
